--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -103,7 +103,7 @@ h1 {
 }
 .menu {
     gap: 50px;
-    @include p(none, 13px, 500, 14px, 16.41px, none, none, none, none, none, "Roboto")
+    @include p(none, 13px, 500, 14px, 16.41px, #212121, none, none, none, none, "Roboto")
 }
 .sec_2p {
     width: 270px;
