--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ h1 {
   font-weight: 500;
   font-size: 14px;
   line-height: 16.41px;
-  color: none;
+  color: #212121;
   padding-top: none;
   padding-bottom: none;
   padding-left: none;
